Fix syntaxes tree branching when a literal is present in the middle of a syntax